[gd_scene load_steps=5 format=3 uid="uid://c2j806kqy6jlv"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_eeaba"]
[ext_resource type="Script" path="res://scenes/game_manager.gd" id="2_i53me"]
[ext_resource type="Texture2D" uid="uid://cf5rmoeolbv2i" path="res://assets/Brown.png" id="3_xd5xn"]
[ext_resource type="Texture2D" uid="uid://cqvwqrn3mvcbh" path="res://assets/Cool Text - Jump Adventure 455698774053227.png" id="4_pc07w"]

[node name="LevelSelect" type="Node"]
process_mode = 3
script = ExtResource("1_eeaba")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("2_i53me")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_xd5xn")
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -261.0
offset_right = 392.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pc07w")

[node name="Level1Button" type="Button" parent="."]
texture_filter = 1
offset_left = 169.0
offset_top = 325.0
offset_right = 315.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level2Button2" type="Button" parent="."]
texture_filter = 1
offset_left = 335.0
offset_top = 325.0
offset_right = 481.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 32
text = "Level 2"

[node name="Level3Button3" type="Button" parent="."]
texture_filter = 1
offset_left = 500.0
offset_top = 325.0
offset_right = 646.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 32
text = "Level 3"

[node name="Level4Button4" type="Button" parent="."]
texture_filter = 1
offset_left = 668.0
offset_top = 325.0
offset_right = 814.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 32
text = "Level 4"

[node name="Level5Button5" type="Button" parent="."]
texture_filter = 1
offset_left = 836.0
offset_top = 325.0
offset_right = 982.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 32
text = "Level 5"

[node name="BackButton" type="Button" parent="."]
texture_filter = 1
offset_left = 500.0
offset_top = 482.0
offset_right = 646.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button2" to="." method="_on_level_2_button_2_pressed"]
[connection signal="pressed" from="Level3Button3" to="." method="_on_level_3_button_3_pressed"]
[connection signal="pressed" from="Level4Button4" to="." method="_on_level_4_button_4_pressed"]
[connection signal="pressed" from="Level5Button5" to="." method="_on_level_5_button_5_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
